--- a/css/media.css
+++ b/css/media.css
@@ -1,12 +1,11 @@
 @media only screen and (min-width:200px) and (max-width:575px){
+
     header{
         flex-direction: column;
         align-items: stretch;
         padding:10px;
         gap:15px;
         
-
-
     }
     .headerLeft{
         justify-content: center;
@@ -29,5 +28,54 @@
     .searchBox button{
         padding:10px ;
     }
+    .headerBtn{
+        position:fixed;
+        width:100%;
+        background-color:white ;
+        margin-right:center;
+        bottom: 0px;
+
+    }
+    .bannerSection{
+        display:none ;
+    }
+    .orderBanner{
+        padding: 10px;
+        flex-direction: column;
+
+    }
+    .categoryItems{
+        flex-basis: 25%;
+    }
+    .productSection{
+        padding: 30px 10px;
+
+    }
+    .productItems{
+        flex-basis:49%;
+
+    }
+    footer{
+        padding-top: 0px;
+    }
+    .footer-mid-row1{
+        padding: 10px;
+        flex-direction: column;
+    }
+    .FooterLinks__List li{
+        flex-basis:48%;
+    }
+    .footer-mid-row3{
+        padding: 0px 10px;
+
+    }
+    .footer-mid-row2{
+        gap:20px;
+        flex-direction: column;
+
+    }
 
 }
+
+    
+
